# tutorials-vizkit3d_plugin_tutorial

./: CMakeLists.txt  manifest.xml
scripts/: vizkit.plugin.tutorial.rb
src/: CMakeLists.txt  Main.cpp
viz/: CMakeLists.txt  SphereVisualization.cpp  SphereVisualization.hpp  vizkit3d_plugin_tutorial-viz.pc.in  vizkit_plugin.rb  vizkit_plugin_tutorial-viz-qt5.pc.in  vizkit_plugin_tutorial-viz.pc.in
